# util-1c-rac

./: .gitignore  .travis.yml  CONTRIBUTING.rst  README.md  pyproject.toml  settings_example.yaml  setup.py
.github/workflows/: publish.yml
docs/: conf.py
src/util_1c_rac/: rac.py  utils.py
util_1c_rac/: __init__.py  rac.py  utils.py
