[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "bump2version==0.5.11",
    "coverage==4.5.4",
    "flake8==3.7.8",
    "sphinx==1.8.5",
    "tox==3.14.0",
    "watchdog==0.9.0",
]

[project]
name = "util-1c-rac"
version = "0.1.1"
description = "Utils for 1C:Enterprise Remote Administration Client"
authors = [
    {name = "George Kvelidze", email = "georgiykvelidze@gmail.com"},
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
