[tool.pdm]

[project]
authors = [
    {name = "George Kvelidze", email = "georgiykvelidze@gmail.com"},
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "pyyaml>=6.0",
]
description = "Utils for 1C:Enterprise Remote Administration Client"
license = {text = "MIT"}
name = "util-1c-rac"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.2"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]
