[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
    {name = "George Kvelidze", email = "georgiykvelidze@gmail.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "commons-1c>=3.6.2,<4.0.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0",
]
description = "Utils for 1C:Enterprise Remote Administration Client"
license = {text = "MIT"}
name = "util-1c-rac"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.7"

[project.urls]
repository = "https://github.com/Cujoko-Dev/util-1c-rac"

